clusters/talos-robbinsdale/apps/pihole/external-dns.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-dns-primary
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: external-dns-primary
  template:
    metadata:
      labels:
        app: external-dns-primary
    spec:
      serviceAccountName: external-dns
      containers:
        - name: external-dns
          image: registry.k8s.io/external-dns/external-dns:v0.13.5
          # If authentication is disabled and/or you didn't create
          # a secret, you can remove this block.
          args:
            - --source=gateway-httproute
            - --source=gateway-tlsroute
            - --source=gateway-tcproute
            - --source=gateway-udproute
            - --source=service
            - --source=ingress
            # Pihole only supports A/CNAME records so there is no mechanism to track ownership.
            # You don't need to set this flag, but if you leave it unset, you will receive warning
            # logs when ExternalDNS attempts to create TXT records.
            - --registry=noop
            # IMPORTANT: If you have records that you manage manually in Pi-hole, set
            # the policy to upsert-only so they do not get deleted.
            - --policy=upsert-only
            - --provider=pihole
            # Change this to the actual address of your Pi-hole web server
            - --pihole-server=http://pihole-primary-web.pihole
      securityContext:
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-dns-secondary
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: external-dns-secondary
  template:
    metadata:
      labels:
        app: external-dns-secondary
    spec:
      serviceAccountName: external-dns
      containers:
        - name: external-dns
          image: registry.k8s.io/external-dns/external-dns:v0.13.5
          # If authentication is disabled and/or you didn't create
          # a secret, you can remove this block.
          args:
            - --source=gateway-httproute
            - --source=gateway-tlsroute
            - --source=gateway-tcproute
            - --source=gateway-udproute
            - --source=service
            - --source=ingress
            # Pihole only supports A/CNAME records so there is no mechanism to track ownership.
            # You don't need to set this flag, but if you leave it unset, you will receive warning
            # logs when ExternalDNS attempts to create TXT records.
            - --registry=noop
            # IMPORTANT: If you have records that you manage manually in Pi-hole, set
            # the policy to upsert-only so they do not get deleted.
            # - --policy=upsert-only
            - --provider=pihole
            # Change this to the actual address of your Pi-hole web server
            - --pihole-server=http://pihole-secondary-web.pihole
      securityContext:
        fsGroup: 65534 # For ExternalDNS to be able to read Kubernetes token files       fsGroup: 65534 # For ExternalDNS to be able to read Kubernetes token files
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-dns-unifi
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: external-dns-unifi
  template:
    metadata:
      labels:
        app: external-dns-unifi
    spec:
      serviceAccountName: external-dns
      containers:
        - name: webhook
          image: ghcr.io/kashalls/external-dns-unifi-webhook:main
          livenessProbe:
            httpGet:
              path: /healthz
              port: http-webhook
            initialDelaySeconds: 10
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /readyz
              port: http-webhook
            initialDelaySeconds: 10
            timeoutSeconds: 5
        - name: external-dns
          image: registry.k8s.io/external-dns/external-dns:v0.13.5
          # If authentication is disabled and/or you didn't create
          # a secret, you can remove this block.
          args:
            - --source=gateway-httproute
            - --source=gateway-tlsroute
            - --source=gateway-tcproute
            - --source=gateway-udproute
            - --source=service
            - --source=ingress
            # Pihole only supports A/CNAME records so there is no mechanism to track ownership.
            # You don't need to set this flag, but if you leave it unset, you will receive warning
            # logs when ExternalDNS attempts to create TXT records.
            - --registry=noop
            # IMPORTANT: If you have records that you manage manually in Pi-hole, set
            # the policy to upsert-only so they do not get deleted.
            # - --policy=upsert-only
            - --provider=webhook
      securityContext:
        fsGroup: 65534 # For ExternalDNS to be able to read Kubernetes token files
